# rag-4-jiya-process

./: .env.example  .gitignore  process.ipynb  pyproject.toml
infrastructures/: docker-compose.yaml
infrastructures/pocketbase/: .gitignore  Dockerfile
