[project]
name = "rag-4-jiya-process"
requires-python = ">=3.10,<4.0"
dependencies = [
    "docling (>=2.16.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "chromadb-client (>=0.6.3,<0.7.0)",
    "openai (>=1.60.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false