[project]
name = "rag-4-jiya-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb-client>=0.6.3",
    "docling>=2.22.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "nanoid>=2.0.0",
    "openai>=1.63.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]
